# nova.h

./: .gitattributes  .gitignore  CMakeLists.txt  DOC.md  LICENSE  README.md  dist-linux.sh  dist-mac-linx.sh  dist-win32.bat
.github/workflows/: build-macos.yml
build-linx/: CMakeCache.txt  Makefile  cmake_install.cmake  dist-linx.tar.xz  test
build-linx/dist-linx/include/: nova.h
docs/: DOC.md
examples/: goliath_fight.cpp
nova-assets/aseprite/: Breathe.aseprite  Heart.aseprite  Hunger.aseprite  Mana.aseprite  Temperature.aseprite  Thirst.aseprite
src/: main.cpp  nova.cpp  nova.h  novafile.cpp  novafile.h  novajson.cpp  novajson.h  novamisc.cpp  novamisc.h  novastr.cpp  novastr.h  novatime.cpp  novatime.h
